[tool.poetry]
name = "timestransfer"
version = "0.1.0"
description = ""
authors = ["Jan Budziński <jan.budzinski.stud@pw.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"